# asr

./: .gitignore  Anchor.toml  README.md  package.json  recover.json
app/: .env.example  config.ts  middleware.ts  package.json  tailwind.config.js
app/app/: error.tsx  globals.css  layout.tsx  page.tsx
app/components/: ASRClaim.tsx  ASRDisplay.tsx  ASRRewards.tsx  ASRToken.tsx  BadgeProposalStatus.tsx  ButtonCreateLock.tsx  ClientLayout.tsx  CreateForm.tsx  CreateLockForm.tsx  CreateProposalForm.tsx  DepositPopup.tsx  Footer.tsx  Header.tsx  Hero.tsx  LockContextProvider.tsx  LockDetails.tsx  LockDisplay.tsx  LockEcosystemDisplay.tsx  LockStaked.tsx  Monolith.tsx  MonolithContextProvider.tsx  Proposal.tsx  ProposalDisplay.tsx  Proposals.tsx  RecoilContextProvider.tsx  RewardsList.tsx  SummonForm.tsx  VotingPower.tsx  WalletContextProvider.tsx  app-sidebar.tsx  lock-switcher.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  team-switcher.tsx
app/constants/: index.ts
app/lib/: api.ts  seo.tsx  utils.ts
app/public/: metadata.json
programs/asr/: Cargo.toml
programs/asr/src/: errors.rs  lib.rs
programs/asr/src/constants/: mod.rs
programs/asr/src/contexts/: asr_claim.rs  asr_deposit.rs  initialize.rs  lock_new.rs  lock_update.rs  manager_add.rs  manager_remove.rs  mod.rs  proposal_core.rs  proposal_execute.rs  proposal_new.rs  proposal_option.rs  proposal_standard.rs  register.rs  stake_claim.rs  stake_new.rs  vote_new.rs
programs/asr/src/state/: analytics.rs  lock.rs  proposal.rs  user.rs
sdk/: .solitarc.js  package.json
tests/: asr.ts  lock.ts
(+89 files in other folders)
