[package]
name = "asr"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

#[[test.genesis]]
#address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"  
#program = "tests/metaplex_token_metadata_program.so"

[lib]
crate-type = ["cdylib", "lib"]
name = "asr"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
